--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
 	"dependencies": {
 		"bits-ui": "^0.17.0",
 		"clsx": "^2.1.0",
+		"formsnap": "^0.4.3",
 		"mode-watcher": "^0.2.0",
+		"pocketbase": "^0.21.1",
 		"radix-icons-svelte": "^1.2.1",
+		"sveltekit-superforms": "^1.13.4",
 		"tailwind-merge": "^2.2.1",
-		"tailwind-variants": "^0.1.20"
+		"tailwind-variants": "^0.1.20",
+		"zod": "^3.22.4"
 	}
 }
