--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"mode-watcher": "^0.2.0",
 		"pocketbase": "^0.21.1",
 		"radix-icons-svelte": "^1.2.1",
+		"svelte-sonner": "^0.3.17",
 		"sveltekit-superforms": "^1.13.4",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.1.20",
