--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"sveltekit-superforms": "^1.13.4",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.1.20",
+		"vaul-svelte": "^0.2.3",
 		"zod": "^3.22.4"
 	}
 }
